test/negative/Inheritance-among-concrete-clafers-Year-Neg.cfr
year *
   month 12
      week 4
         day 7

myBirthDate
   january : month